--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,7 @@
 {% set name = "ldas-tools-framecpp" %}
 {% set version = "2.6.3" %}
 {% set sha256 = "066a0f5a2d2bbdd04ee5247b9308668d935cd87b1dbf512c2565a7e4e3e4a540" %}
+{% set ldas_tools_al_version = "2.6.1" %}
 
 package:
   name: {{ name }}
@@ -25,11 +26,11 @@ requirements:
     - zlib
     - boost-cpp
     - openssl
-    - ldas-tools-al >=2.6.0
+    - ldas-tools-al >={{ ldas_tools_al_version }}
   run:
     - boost-cpp
     - openssl
-    - ldas-tools-al >=2.6.0
+    - ldas-tools-al >={{ ldas_tools_al_version }}
 
 test:
   commands:
