--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,16 +1,17 @@
 {% set name = "ldas-tools-framecpp" %}
 {% set version = "2.7.0" %}
 {% set sha256 = "539ae6ab7966f4e1379dfeb711d02e9edc087e1a8acab057af8a7405b16788a9" %}
-{% set ldas_tools_al_version = "2.6.2" %}
+
+{% set ldas_tools_al_version = "2.6.3" %}
+{% set ldas_tools_cmake_version = "1.0.8" %}
 
 package:
-  name: {{ name }}
-  version: {{ version }}
+  name: "{{ name }}"
+  version: "{{ version }}"
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
-  url: http://software.ligo.org/lscsoft/source/{{ name }}-{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  url: "http://software.ligo.org/lscsoft/source/{{ name }}-{{ version }}.tar.gz"
+  sha256: "{{ sha256 }}"
 
 build:
   number: 0
@@ -18,41 +19,52 @@ build:
 
 requirements:
   build:
-    - pkg-config
-    - make
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    - cmake >=3.6
+    - pkg-config  # [unix]
   host:
-    - zlib
     - boost-cpp
-    - openssl
     - ldas-tools-al >={{ ldas_tools_al_version }}
+    - ldas-tools-cmake >={{ ldas_tools_cmake_version }}
+    - openssl
+    - zlib
   run:
     - boost-cpp
-    - openssl
     - ldas-tools-al >={{ ldas_tools_al_version }}
 
 test:
+  requires:
+    - pkg-config  # [unix]
   commands:
-    - framecpp_checksum --help
-    - framecpp_compressor --help
-    - framecpp_dump_channel --help
-    - framecpp_dump_objects --help
-    - framecpp_dump_toc --help
-    - framecpp_fix_metadata --help
-    - framecpp_query --help
-    - framecpp_sample --help
+    # framecpp_sample creates Z-ilwd_test_frame-600000000-1.gwf
+    - framecpp_sample
+    - framecpp_checksum --verbose --checksum-file --checksum-frame --checksum-structure Z-ilwd_test_frame-600000000-1.gwf
+    - framecpp_compressor --compression-level 9 --output compressed.gwf Z-ilwd_test_frame-600000000-1.gwf
+    - framecpp_dump_channel --channel Z0:RAMPED_INT_2U_1 Z-ilwd_test_frame-600000000-1.gwf
+    - framecpp_dump_objects --silent Z-ilwd_test_frame-600000000-1.gwf
+    - framecpp_dump_toc Z-ilwd_test_frame-600000000-1.gwf
+    - framecpp_fix_metadata --output fixed.gwf Z-ilwd_test_frame-600000000-1.gwf
+    - framecpp_fracfg --channels Z0:RAMPED_INT_2U_1 --output fracfg.gwf Z-ilwd_test_frame-600000000-1.gwf
+    - framecpp_dump_toc fracfg.gwf
     - framecpp_transform --help
-    - framecpp_verify --help
+    - framecpp_verify --verbose Z-ilwd_test_frame-600000000-1.gwf
+    - pkg-config --print-errors --modversion framecpp  # [unix]
+    - pkg-config --print-errors --modversion framecpp_common  # [unix]
+    - pkg-config --print-errors --modversion framecppc  # [unix]
+    - pkg-config --print-errors --modversion framecpp3  # [unix]
+    - pkg-config --print-errors --modversion framecpp4  # [unix]
+    - pkg-config --print-errors --modversion framecpp6  # [unix]
+    - pkg-config --print-errors --modversion framecpp7  # [unix]
+    - pkg-config --print-errors --modversion framecpp8  # [unix]
 
 about:
-  home: https://ldastools.docs.ligo.org/LDAS_Tools/Beta/doc/ldas-tools-framecpp/framecpp/html/
-  dev_url: https://git.ligo.org/ldastools/LDAS_Tools
-  doc_url: https://ldastools.docs.ligo.org/LDAS_Tools/Beta/doc/ldas-tools-framecpp/framecpp/html/
-  license: GPLv2
-  license_family: GPL
-  license_file: COPYING
-  summary: LDAS tools libframecpp toolkit runtime files
+  home: "https://wiki.ligo.org/Computing/LDASTools"
+  dev_url: "https://git.ligo.org/ldastools/LDAS_Tools"
+  license: "GPL-2.0-or-later"
+  license_family: "GPL"
+  license_file: "COPYING"
+  summary: "LDAS tools libframecpp toolkit runtime files"
   description: |
     This provides the runtime libraries for the framecpp library.
 
