--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,7 @@ source:
   sha256: 9b0f1ba2b9f23a13e4141a23027f7491a33b57334c12154d261ac44ff3430d7a
   patches:
     - no-test-frames.gwf  # [build_platform != target_platform]
+    - gtest-build-testing.patch
 
 build:
   number: 0
