--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
   url: http://software.ligo.org/lscsoft/source/{{ name }}-{{ version }}.tar.gz
   sha256: 9b0f1ba2b9f23a13e4141a23027f7491a33b57334c12154d261ac44ff3430d7a
   patches:
-    - no-test-frames.gwf  # [build_platform != target_platform]
+    - test-frames-build-testing.patch
     - gtest-build-testing.patch
 
 build:
