--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,6 +17,8 @@ source:
     - no-static.patch
 
 build:
+  error_overdepending: true
+  error_overlinking: true
   number: 0
   skip: true  # [win]
   run_exports:
