--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,8 @@ source:
 build:
   error_overdepending: true
   error_overlinking: true
+  ignore_run_exports:
+    - openssl  # [osx]
   number: 0
   skip: true  # [win]
   run_exports:
@@ -37,7 +39,7 @@ requirements:
     - gtest
     - ldas-tools-al >={{ ldas_tools_al_version }}
     - ldas-tools-cmake >={{ ldas_tools_cmake_version }}
-    - openssl  # [not osx]
+    - openssl
     - zlib
     - zstd
   run:
