--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,8 @@ source:
   patches:
     # disable building static libraries
     - no-static.patch
+    # allow for longer test timeout when emulating
+    - test-timeout.patch  # [build_platform != target_platform]
 
 build:
   number: 0
