--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,6 +21,7 @@ build:
   error_overlinking: true
   ignore_run_exports:
     - openssl  # [osx]
+    - gtest
   number: 2
   skip: true  # [win]
   run_exports:
