--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,8 @@ source:
   patches:
     # disable building static libraries
     - no-static.patch
+    # force use of c++14
+    - c++14.patch
 
 build:
   error_overdepending: true
