ignore cmake 3.27 because of bug with ctest
see https://gitlab.kitware.com/cmake/cmake/-/issues/23979

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,7 +33,7 @@ requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
-    - cmake >=3.6
+    - cmake >=3.6,!=3.27.*
     - make  # [unix]
     - pkg-config  # [unix]
   host:
